// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapping beans response 1`] = `
{
  "alcohol": null,
  "barCode": "5000157024671",
  "caffeine": null,
  "calcium": null,
  "calories": 168,
  "carbs": 32.1,
  "cholesterol": null,
  "copper": null,
  "fat": 0.7,
  "fiber": 8,
  "iron": null,
  "magnesium": null,
  "manganese": null,
  "name": "Baked Beans",
  "origin": "open-food-facts",
  "originId": "5000157024671",
  "phosphorus": null,
  "potassium": null,
  "protein": 10,
  "saturatedFat": 0.1,
  "selenium": null,
  "servingSize": 207.5,
  "servingUnit": "g",
  "sodium": 0.511,
  "sugar": 8.9,
  "transFat": null,
  "vitaminA": null,
  "vitaminB1": null,
  "vitaminB12": null,
  "vitaminB2": null,
  "vitaminB3": null,
  "vitaminB5": null,
  "vitaminB6": null,
  "vitaminB7": null,
  "vitaminB9": null,
  "vitaminC": null,
  "vitaminD": null,
  "vitaminE": null,
  "vitaminK": null,
  "zinc": null,
}
`;

exports[`mapping response 1`] = `
{
  "alcohol": null,
  "barCode": "5000112546415",
  "caffeine": null,
  "calcium": null,
  "calories": 525,
  "carbs": 132,
  "cholesterol": null,
  "copper": null,
  "fat": 0,
  "fiber": null,
  "iron": null,
  "magnesium": null,
  "manganese": null,
  "name": "Coca Cola",
  "origin": "open-food-facts",
  "originId": "5000112546415",
  "phosphorus": null,
  "potassium": null,
  "protein": 0,
  "saturatedFat": 0,
  "selenium": null,
  "servingSize": 1250,
  "servingUnit": "ml",
  "sodium": 0,
  "sugar": 132,
  "transFat": null,
  "vitaminA": null,
  "vitaminB1": null,
  "vitaminB12": null,
  "vitaminB2": null,
  "vitaminB3": null,
  "vitaminB5": null,
  "vitaminB6": null,
  "vitaminB7": null,
  "vitaminB9": null,
  "vitaminC": null,
  "vitaminD": null,
  "vitaminE": null,
  "vitaminK": null,
  "zinc": null,
}
`;
